--- a/indexBS.html
+++ b/indexBS.html
@@ -10,7 +10,6 @@
 </head>
 <body>
     <ul class="nav" >
-        <img src="logo2.png" class="rounded float-start" id="logo" alt="logo">
         <li class="nav-item ">
           <a class="nav-link " href="#">Home</a>
         </li>
@@ -24,32 +23,20 @@
           <a class="nav-link" href="#">Contact</a>
         </li>
       </ul>
-      <p class="Tittle">	"A thousand words leave not the same deep impression as does a single deed." <span class="quoteAuthor"> <a href="https://en.wikipedia.org/wiki/Henrik_Ibsen">-Henrik Ibsen</a></span> </p>
-      <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="image1.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="img3.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="img4.jpg" class="d-block w-100" alt="...">
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+      <div class="container">
+        <video autoplay loop muted plays-inline class="back-video">
+          <source src="video2.mp4" type="video/mp4">
+        </video>
+         <h1>
+           <span>Eduard</span>
+           <span>Ceparu</span> 
+          <br>
+           <span>Full</span>
+           <span>Stack</span>
+           <span>Developer</span>
+           <br>
+           <span><a href="about.html"><button type="button" class="btn btn-success">Begin</button></a></button></span>
+         </h1>
       </div>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-      <footer>
-        <h3>Designed by <span class="name"> Eduard Ceparu</span></h3>
-        <span class="emoji">&#128187;</span>
-</footer> 
 </body>
 </html>
