--- a/about.html
+++ b/about.html
@@ -14,20 +14,19 @@
 </head>
 <body>
     <header>
-        <img src="logo.png" alt="Personal Logo">
         <nav class="navbar"></nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#">About me</a></li>
+            <li><a href="indexBS.html">Home</a></li>
+            <li><a href="about.html">About me</a></li>
             <li><a href="#">Projects</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </header>
 
     <div class="accordion" id="accordionPanelsStayOpenExample">
         <div class="accordion-item">
           <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+            <button class="accordion-button slideBg" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
              Who am I?
             </button>
           </h2>
@@ -46,7 +45,7 @@
                            <br>Here are my social networks in case you want to know more about me :
                             </p>
                         <div class="social">
-                            <a href="" target="_blank"><i class="fa-brands fa-twitter-square fa-2xl"></i></a>
+                            <a href="https://twitter.com/Eduard_Dev" target="_blank"><i class="fa-brands fa-twitter-square fa-2xl"></i></a>
                             <a href="https://github.com/EduardCeparu" target="_blank"><i class="fa-brands fa-github-square fa-2xl"></i></a>
                             <a href="https://www.linkedin.com/in/eduard-s-gabriel-ceparu-1550761b9/" target="_blank"><i class="fa-brands fa-linkedin fa-2xl" ></i></a>
                         </div>
@@ -68,6 +67,7 @@
                     <div class="card-container">
                         <div class="header">
                             <a href="#">
+                              <br>
                                 <img id="image"src="collage.jpg">
                             </a>
                             <br>
@@ -113,26 +113,6 @@
                     </div>
                 </div>
             
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="panelsStayOpen-headingThree">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-              Languages
-            </button>
-          </h2>
-          <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
-            <div class="container">
-              <div class="card-container">
-                  <div class="header">
-                      <a href="#">
-                          <img class="imgLanguage" src="languages.jpg" alt="picture of languages">
-                      </a>
-                          <h2 class="name">Languages</h2>                         
-                  </div>      
-                  </div>
-              </div>
-          </div>
           </div>
         </div>
       </div>
