--- a/indexBS.html
+++ b/indexBS.html
@@ -11,16 +11,16 @@
 <body>
     <ul class="nav" >
         <li class="nav-item ">
-          <a class="nav-link " href="#">Home</a>
+          <a class="nav-link " href="indexBS.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About me</a>
+          <a class="nav-link" href="about.html">About me</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Projects</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link" href="contact.html">Contact</a>
         </li>
       </ul>
       <div class="container">
