--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
         <ul>
             <li><a href="indexBS.html">Home</a></li>
             <li><a href="about.html">About me</a></li>
-            <li><a href="#">Projects</a></li>
+            <li><a href="projects.html">Projects</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </header>
