--- a/contact.html
+++ b/contact.html
@@ -17,24 +17,21 @@
           <a class="nav-link" href="about.html">About me</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Projects</a>
+          <a class="nav-link" href="projects.html">Projects</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="contact.html">Contact</a>
         </li>
       </ul>
     <div class="container">
-        <video autoplay loop muted plays-inline class="back-video">
-            <source src="space.mp4" type="video/mp4">
-          </video>
     <form action="mailto:eduardceparu@gmail.com" method="get">
         <div class="mb-3">
           <label for="email" class="form-label">Email address</label>
           <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
         </div>
         <div class="mb-3">
-          <label for="password" class="form-label">Password</label>
-          <input type="password" class="form-control" id="password">
+          <label for="text" class="form-label">Subject</label>
+          <input type="subject" class="form-control" id="subject">
         </div>
           <br>
           <select class="form-select" aria-label="Default select example">
@@ -56,5 +53,6 @@
         <button type="submit" class="btn btn-success">Submit</button>
       </form>
     </div>
+  </div>
 </body>
 </html>
