--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="contact.css">
 </head>
 <body>
-    <ul class="nav" >
+  <div class="row align-items-center">     
+    <div class="col-md">
+     <ul class="nav" >
         <li class="nav-item ">
           <a class="nav-link " href="indexBS.html">Home</a>
         </li>
@@ -23,8 +25,11 @@
           <a class="nav-link" href="contact.html">Contact</a>
         </li>
       </ul>
+    </div>
+  </div>
+
     <div class="container">
-    <form action="mailto:eduardceparu@gmail.com" method="get">
+     <form action="" method="post">
         <div class="mb-3">
           <label for="email" class="form-label">Email address</label>
           <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
@@ -53,6 +58,5 @@
         <button type="submit" class="btn btn-success">Submit</button>
       </form>
     </div>
-  </div>
 </body>
 </html>
