--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     <div class="col-md">
     <ul class="nav" >
         <li class="nav-item ">
-          <a class="nav-link " href="indexBS.html">Home</a>
+          <a class="nav-link " href="index.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="about.html">About me</a>
