--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         </li>
       </ul>
       <div class="container">
-        <video autoplay loop muted plays-inline class="back-video">
+        <!--<video autoplay loop muted plays-inline class="back-video">
           <source src="video2.mp4" type="video/mp4">
-        </video>
+        </video> -->
          <h1>
            <span>Eduard</span>
            <span>Ceparu</span> 
