--- a/working.html
+++ b/working.html
@@ -10,14 +10,14 @@
 </head>
 <body>
     <video autoplay loop muted plays-inline class="back-video">
-        <source src="bgvideo.mp4" type="video/mp4">
+        <source src="images/bgvideo.mp4" type="video/mp4">
       </video>
     <div class="container">
     <div class="text">
     <h1>Ops...Currently I am creating some cool Projects.</h1>
     </div>
     <div class="gif">
-    <img src="catGif.gif " alt="A cat coding">
+    <img src="images/catGif.gif " alt="A cat coding">
     </div>
     
 </div>
