--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
                     <div class="header">
                       <div class="headerContent">
                         <a href="#">
-                            <img src="foto-carnet_Eduard-Ceparu.jpg" alt="picture of myself">
+                            <img src="images/foto-carnet_Eduard-Ceparu.jpg" alt="picture of myself">
                         </a>
                             <h2 class="name">Eduard Ceparu</h2>
                             <h4 class="rol">Full Stack Developer</h4>
@@ -55,37 +55,37 @@
                         </div>
                         <div class="progressBox">
                         <div class="progress" style="height: 1.3rem">
-                          <img class="skillIcon" src="003-html-5.png" alt="">
+                          <img class="skillIcon" src="images/003-html-5.png" alt="">
                           <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" style="width: 85%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                         <br>
                         <div class="progress" style="height: 1.3rem;">
-                          <img class="skillIcon" src="005-css-3.png" alt="">
+                          <img class="skillIcon" src="images/005-css-3.png" alt="">
                           <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                         <br>
                         <div class="progress" style="height: 1.3rem">
-                          <img class="skillIcon" src="001-bootstrap.png" alt="">
+                          <img class="skillIcon" src="images/001-bootstrap.png" alt="">
                           <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style="width: 40%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                         <br>
                         <div class="progress" style="height: 1.3rem">
-                          <img class="skillIcon" src="004-js.png" alt="">
+                          <img class="skillIcon" src="images/004-js.png" alt="">
                           <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style="width: 35%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                         <br>  
                         <div class="progress" style="height: 1.3rem">
-                          <img class="skillIcon" src="006-java.png" alt="">
+                          <img class="skillIcon" src="images/006-java.png" alt="">
                           <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" style="width: 70%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                         <br>
                         <div class="progress" style="height: 1.3rem">
-                          <img class="skillIcon" src="002-sql-server.png" alt="">
+                          <img class="skillIcon" src="images/002-sql-server.png" alt="">
                           <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" style="width: 80%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                         <br>
                         <div class="progress" style="height: 1.3rem">
-                          <img class="skillIcon" src="007-github.png" alt="">
+                          <img class="skillIcon" src="images/007-github.png" alt="">
                           <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar" style="width: 60%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                       </div>
