--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <title>About me</title>
 </head>
 <body>
-  <div class="row align-items-center">     
+  <div class="row align-items-start">     
     <div class="col-md">
     <ul class="nav" >
         <li class="nav-item ">
