--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="contact.css">
 </head>
 <body>
-  <div class="row align-items-center">     
+  <div class="row align-items-start">     
     <div class="col-md">
      <ul class="nav" >
         <li class="nav-item ">
