--- a/index.html
+++ b/index.html
@@ -23,10 +23,8 @@
           <a class="nav-link" href="contact.html">Contact</a>
         </li>
       </ul>
+      <div id="MyClockDisplay" class="clock" onload="showTime()"></div>
       <div class="container">
-        <!--<video autoplay loop muted plays-inline class="back-video">
-          <source src="video2.mp4" type="video/mp4">
-        </video> -->
          <h1>
            <span>Eduard</span>
            <span>Ceparu</span> 
@@ -38,5 +36,6 @@
            <span><a href="about.html"><button type="button" class="btn btn-success">Begin</button></a></button></span>
          </h1>
       </div>
+      <script src="script.js"></script>
 </body>
 </html>
