--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@
                         <div class="card-body" >
                           <h5 class="card-title">Java Projects</h5>
                           <p class="card-text">Projects made with basic and intermediate Java technology</p>
-                          <a href="https://github.com/EduardCeparu/slots.git" class="btn btn-success">Check</a>
+                          <a href="https://github.com/EduardCeparu/Codecademy-Java-projects" class="btn btn-success">Check</a>
                         </div>
                       </div>
                 </div>
@@ -54,7 +54,7 @@
                         <div class="card-body" >
                           <h5 class="card-title">Frontend Projects</h5>
                           <p class="card-text">Projects made with basic HTML, CSS and JavaScript technologies</p>
-                          <a href="working.html" class="btn btn-success">Check</a>
+                          <a href="https://github.com/EduardCeparu/Codecademy-JavaScript-projects" class="btn btn-success">Check</a>
                         </div>
                       </div>
                 </div>
